# python-rust

./: README.md  docker-compose.yaml  startup.sh
ingestion/: pyproject.toml  startup.sh
ingestion/ingestion/: main.py
pure-python-mongo/: .env  pyproject.toml  startup.sh
pure-python-mongo/pure_python_mongo/: app.py  main.py  model.py  repository.py
python-rust-mongo/: pyproject.toml  startup.sh
python-rust-mongo/metrics-aggregator/: Cargo.toml  pyproject.toml
python-rust-mongo/metrics-aggregator/src/: lib.rs
python-rust-mongo/metrics-aggregator/src/models/: mod.rs  namespace_model.rs  secret.rs
python-rust-mongo/metrics-aggregator/src/repositories/: report_repository.rs
python-rust-mongo/python_rust_mongo/: app.py  main.py
